Modify build for Java 8
- Pull in Lombok for `var`
- Shim for replaceAll
- Update gradle properties